# qxmlrpc

./: CMakeLists.txt  GenerateqxmlrpcConfig.cmake  Readme  Useqxmlrpc.cmake.in  qxmlrpc.pro  qxmlrpcConfig.cmake.in
examples/client/: client.pro  testclient.cpp
examples/server/: server.pro
test/pyclient/: pyclient.py
test/pyserver/: pyserver.py
test/unit/: testqxmlrpc.cpp  testqxmlrpc.h  unit.pro
xmlrpc/: CMakeLists.txt
